--- a/layout/style.css
+++ b/layout/style.css
@@ -12,7 +12,7 @@
 @import "css/publish.css";
 
 @import "css/post.css";
-@import "css/color.css"
-@import "css/profile.css"
+@import "css/color.css";
+@import "css/profile.css";
 
 @import "css/layout-2.css";
