--- a/profile/style.css
+++ b/profile/style.css
@@ -12,5 +12,5 @@
 @import "css/publish.css";
 
 @import "css/post.css";
-@import "css/color.css"
-@import "css/profile.css"
+@import "css/color.css";
+@import "css/profile.css";
