added and fixed somestuff

--- a/color/css/color.css
+++ b/color/css/color.css
@@ -5,7 +5,7 @@
 	--border-color:#696D6C;
 }
 
-/* color css2, Complementary*/
+/* color css2, Complementary (watermelon combo*/
 :root { 
 	--main-color:#52B34F;
 	--accent-color:#FF8ACA;
