--- a/responsive/css/main.css
+++ b/responsive/css/main.css
@@ -12,10 +12,11 @@ button, input {
 	padding: 3px 6px;
 	line-height: 1;
 	vertical-align: middle;
+	text-decoration: none;
 }
 
 #container {
-	max-width: 600px;
+	max-width: 800px;
 	margin: 0 auto;
 	border-radius: 50px 20px;
 }
@@ -27,7 +28,8 @@ button, input {
 }
 
 img{
-	width: 100%;
+	width: 70%;
+	align-items: left;
 }
 
 #publish-button{
@@ -49,6 +51,10 @@ img{
 	margin-bottom: 1em;
 }
 
+#create-button{
+	margin-left: 30px;
+}
+
 body.auth #login {
 	display: none;
 }
@@ -68,4 +74,11 @@ body.auth #user-info {
 #update-profile-image,
 body #user-info {
 	display: none;
+}
+
+a{
+	text-decoration: none;
+}
+a:hover{
+	text-decoration: underline;
 }
