--- a/responsive/css/layout-2.css
+++ b/responsive/css/layout-2.css
@@ -6,7 +6,7 @@
 	grid-template-areas:
 		"login login login"
 		"title title title"
-		"publish nothing nothing"
+		"publish publish publish"
 		"posts posts posts"
 		"posts posts posts"
 		"posts posts posts"
