--- a/responsive/css/main.css
+++ b/responsive/css/main.css
@@ -16,26 +16,27 @@ button, input {
 }
 
 #container {
-	max-width: 800px;
+	width: 1000px;
+	height: 1000px
 	margin: 0 auto;
 	border-radius: 50px 20px;
 }
 
 #title{
 	text-align: center;
-	padding-top: 50;
-	padding-bottom: 50;
-	margin: 50px 0 50px 0;
+	margin: 0 0 50px 0;
 	font-size: 50px;
 }
 
 img{
 	width: 70%;
 	align-items: left;
+	height: 600px;
 }
 
 #publish-button{
 	margin-top: 5px;
+	display: inline-flex;
 }
 
 #user-info{
@@ -44,11 +45,6 @@ img{
 	text-align: center;
 }
 
-#login{
-	text-align: center;
-	padding-bottom: 20px;
-	float: right;
-}
 
 #user-info {
 	margin-bottom: 1em;
@@ -86,18 +82,6 @@ a:hover{
 	text-decoration: underline;
 }
 
-#nav{
-	float: left;
-	display: block;
- 	padding: 8px;
- 	text-decoration: none;
- 	margin: 30px 10px 10px 10px;
- 	position: absolute;
- 	align-content: center;
- 	border-bottom-left-radius: 1em;
- 	border-bottom-right-radius: 1em;
-}
-
 li{
 	list-style: none;
 	display: inline;
@@ -108,8 +92,25 @@ li{
 	margin-right: 200px;
 }
 
-#post-bg{
-	max-width: 900px;
-	margin: 0 auto;
-	border-radius: 50px 20px;
+#publish-post{
+	display: inline-block;
+	position: center;
+}
+
+#hide{
+	display: none;
+}
+
+#login{
+
+	height: 40px;
+	width: 100%;
+	right: 0;	
+	background-color: #ebebeb;
+}
+
+#upload{
+	display: flex;
+	margin-left: auto;
+    margin-right: auto 
 }
