--- a/responsive/css/main.css
+++ b/responsive/css/main.css
@@ -17,7 +17,7 @@ button, input {
 
 #container {
 	width: 1000px;
-	height: 1000px
+	height: 1000px;
 	margin: 0 auto;
 	border-radius: 50px 20px;
 }
@@ -112,5 +112,5 @@ li{
 #upload{
 	display: flex;
 	margin-left: auto;
-    margin-right: auto 
+    margin-right: auto;
 }
