--- a/responsive/css/post.css
+++ b/responsive/css/post.css
@@ -1,7 +1,5 @@
 .post {
 	border-radius: 2em;
-	margin-top: 1em;
-	margin-bottom: 50px;
 	border-width: 10px;
 	border: 2px solid;
 	display: flex;
@@ -9,6 +7,9 @@
 	justify-content: space-between;
 	border-color: #ebebeb;
 	background-color: #faf8f6;
+	margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
 }
 
 .post-text {
